@@ -3,7 +3,7 @@ use warnings;
 
 use File::Object;
 use SGML::PYX;
-use Test::More 'tests' => 8;
+use Test::More 'tests' => 9;
 use Test::NoWarnings;
 use Test::Output;
 
@@ -119,4 +119,19 @@ stdout_is(
 	},
 	$right_ret,
 	'Test element with attribute which has value with space.',
+);
+
+# Test.
+$obj = SGML::PYX->new;
+$right_ret = <<'END';
+(element
+Aa value
+END
+stdout_is(
+	sub {
+		$obj->parsefile($data_dir->file('element8.sgml')->s);
+		return;
+	},
+	$right_ret,
+	'Test element with attribute which has name only one character length.',
 );
